--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,18 +10,51 @@
   </head>
 
   <body>
-       <% if user_signed_in? %>
-      <li>
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-      </li>
-    <% else %>
-      <li>
-        <%= link_to "新規登録", new_user_registration_path %>
-      </li>
-      <li>
-        <%= link_to "ログイン", new_user_session_path %>
-      </li>
-    <% end %>
-    <%= yield %>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand" href="/">
+          <span>Bookers</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse"
+        date-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
+        aria-expanded="false" aria-label="Toggle navigation">
+          <span class=navbar-toggler-icon></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ml auto">
+            <% if user_signed_in? %>
+            <li>
+              <%= link_to 'Home', users_path(), class: 'fas fa-link nav-link text-light' %>
+            </li>
+            <li>
+              <%= link_to 'Users', users_path, class: 'fas fa-link nav-link text-light' %>
+            </li>
+            <li>
+              <%= link_to 'Books', books_path, class: 'fas fa-link nav-link text-light' %>
+            </li>
+            <li>
+              <%= link_to 'logout', destroy_user_session_path, method: :delete, class: 'fas fa-link nav-link text-light' %>
+            </li>
+            <% else %>
+            <li>
+              <%= link_to 'Home', root_path, class: 'fas fa-link nav-link text-light' %>
+            </li>
+            <li>
+              <%= link_to 'About', home_about_path, class: 'fas fa-link nav-link text-light' %>
+            </li>
+            <li>
+              <%= link_to "Sign up", new_user_registration_path, class: 'fas fa-link nav-link text-light' %>
+            </li>
+            <li>
+              <%= link_to "Log in", new_user_session_path, class: 'fas fa-link nav-link text-light' %>
+            </li>
+            <% end %>
+            <%= yield %>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
   </body>
 </html>
