--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://kit.fontawesome.com/8683c470f0.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -22,39 +23,50 @@
           <span class=navbar-toggler-icon></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav ml auto">
+          <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
-            <li>
+            <li class="nav-item">
               <%= link_to 'Home', users_path(), class: 'fas fa-link nav-link text-light' %>
             </li>
-            <li>
+            <li class="nav-item">
               <%= link_to 'Users', users_path, class: 'fas fa-link nav-link text-light' %>
             </li>
-            <li>
+            <li class="nav-item">
               <%= link_to 'Books', books_path, class: 'fas fa-link nav-link text-light' %>
             </li>
-            <li>
+            <li class="nav-item">
               <%= link_to 'logout', destroy_user_session_path, method: :delete, class: 'fas fa-link nav-link text-light' %>
             </li>
             <% else %>
-            <li>
+            <li class="nav-item">
               <%= link_to 'Home', root_path, class: 'fas fa-link nav-link text-light' %>
             </li>
-            <li>
+            <li class="nav-item">
               <%= link_to 'About', home_about_path, class: 'fas fa-link nav-link text-light' %>
             </li>
-            <li>
+            <li class="nav-item">
               <%= link_to "Sign up", new_user_registration_path, class: 'fas fa-link nav-link text-light' %>
             </li>
-            <li>
+            <li class="nav-item">
               <%= link_to "Log in", new_user_session_path, class: 'fas fa-link nav-link text-light' %>
             </li>
             <% end %>
-            <%= yield %>
           </ul>
         </div>
       </div>
     </nav>
   </header>
+  <main>
+    <%= yield %>
+  </main>
+  <footer>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="mx-auto">
+          <p>CopyRight Infratop.inc</p>
+        </div>
+      </div>
+    </div>
+  </footer>
   </body>
 </html>
