--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,5 @@
 <div>
+  <h2>User info</h2>
   <%= attachment_image_tag @user, :profile_image, :fill, 300, 300, format: 'jpeg' %>
   <h3><%= @user.name %></h3>
   <h3><%= @user.introduction %></h3>
@@ -7,11 +8,36 @@
   <% end %>
 </div>
 
+<div>
+  <h2>New book</h2>
+  <%= form_with model:@book, url:'/books', local:true do |f| %>
+    <h4>Title</h4>
+    <%= f.text_field :title %>
+    <h4>Opinion</h4>
+    <%= f.text_area :body %>
+    <%= f.submit 'Create Book' %>
+  <% end %>
+</div>
 
-<%= form_with model:@book, url:'/books', local:true do |f| %>
-  <h4>Title</h4>
-  <%= f.text_field :title %>
-  <h4>Opinion</h4>
-  <%= f.text_area :body %>
-  <%= f.submit 'Create Book' %>
-<% end %>
+<div>
+  <h2>Books</h2>
+  <table class>
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Opinion</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @books.each do |book| %>
+      <tr>
+        <td>
+        <%= link_to book.title, book_path(book.id) %>
+        </td>
+        <td><%= book.body %></td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
