--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,10 @@
 <%= form_with model:@user, local:true do |f| %>
   <label for="inputName">Name</label>
   <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"name"%>
-  <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%>
   <label for="inputImage">Image</label>
-  <%= f.attachment_field :profile_image, placeholder: "Image" %>  <%= f.submit "Update user" %>
+  <%= f.attachment_field :profile_image, placeholder: "Image" %>
+
+  <label for="inputProfile">Introduction</label>
+  <%= f.text_area :name, autofocus: true, id:"inputProfile", placeholder:"introduction"%>
+  <%= f.submit "Update user" %>
 <% end %>
