--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,43 +1,75 @@
-<div>
-  <h2>User info</h2>
-  <%= attachment_image_tag @user, :profile_image, :fill, 300, 300, format: 'jpeg' %>
-  <h3><%= @user.name %></h3>
-  <h3><%= @user.introduction %></h3>
-  <% if @user.id == current_user.id %>
-  <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
-  <% end %>
-</div>
-
-<div>
-  <h2>New book</h2>
-  <%= form_with model:@book, url:'/books', local:true do |f| %>
-    <h4>Title</h4>
-    <%= f.text_field :title %>
-    <h4>Opinion</h4>
-    <%= f.text_area :body %>
-    <%= f.submit 'Create Book' %>
-  <% end %>
-</div>
-
-<div>
-  <h2>Books</h2>
-  <table class>
-    <thead>
-      <tr>
-        <th>Title</th>
-        <th>Opinion</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @books.each do |book| %>
-      <tr>
-        <td>
-        <%= link_to book.title, book_path(book.id) %>
-        </td>
-        <td><%= book.body %></td>
-      </tr>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+      <table class="table">
+        <tbody>
+        <tr>
+          <th>name<th>
+          <th><%= @user.name %></th>
+        </tr>
+        <tr>
+          <th>introduction</th>
+          <th><%= @user.introduction %></th>
+        </tr>
+        </tbody>
+      </table>
+      <div class="row">
+      <% if @user.id == current_user.id %>
+        <%= link_to edit_user_path(@user) do%>
+          <button class="btn btn-outline-secondary btn-block"><i class="fas fa-user-cog"></i></button>
+        <% end %>
       <% end %>
-    </tbody>
-  </table>
+      </div>
+
+      <h2 class="mt-3">New book</h2>
+      <%= form_with model:@book, url:'/books', local:true do |f| %>
+        <div class="form-group">
+          <label for="book_title">Title</label>
+          <%= f.text_field :title %>
+        </div>
+        <div class="form-group">
+          <label for="book_opinion">Opinion</label>
+          <%= f.text_area :body %>
+        </div>
+        <div class="form-group">
+
+          <%= f.submit 'Create Book'  %>
+
+        </div>
+      <% end %>
+
+    </div>
+
+    <div class="col-md-8 offset-md-1">
+    <h2>Books</h2>
+    <table class="table table-hover table-inverse">
+      <thead>
+        <tr>
+          <th></th>
+          <th>Title</th>
+          <th>Opinion</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @books.each do |book| %>
+        <tr>
+          <% user = User.find(book.user_id) %>
+          <td>
+          <%= link_to user_path(user) do%>
+          <%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+          <% end %>
+          </td>
+          <td>
+          <%= link_to book.title, book_path(book.id) %>
+          </td>
+          <td><%= book.body %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+    </div>
+  </div>
 </div>
