--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,45 +1,9 @@
+<p id="notice"></p>
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
-      <h2>User info</h2>
-      <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
-      <table class="table">
-        <tbody>
-        <tr>
-          <th>name<th>
-          <th><%= @user.name %></th>
-        </tr>
-        <tr>
-          <th>introduction</th>
-          <th><%= @user.introduction %></th>
-        </tr>
-        </tbody>
-      </table>
-      <div class="row">
-      <% if @user.id == current_user.id %>
-        <%= link_to edit_user_path(@user) do%>
-          <button class="btn btn-outline-secondary btn-block"><i class="fas fa-user-cog"></i></button>
-        <% end %>
-      <% end %>
-      </div>
-
-      <h2 class="mt-3">New book</h2>
-      <%= form_with model:@book, url:'/books', local:true do |f| %>
-        <div class="form-group">
-          <label for="book_title">Title</label>
-          <%= f.text_field :title %>
-        </div>
-        <div class="form-group">
-          <label for="book_opinion">Opinion</label>
-          <%= f.text_area :body %>
-        </div>
-        <div class="form-group">
-
-          <%= f.submit 'Create Book'  %>
-
-        </div>
-      <% end %>
-
+     <%= render 'books/info', user: @user %>
+     <%= render 'books/under', book: @book %>
     </div>
 
     <div class="col-md-8 offset-md-1">
