--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,10 @@
+<p id="notice"></p>
 <div class="container">
   <div class="row">
-    <div class="col-md-3"></div>
+    <div class="col-md-3">
+      <%= render 'books/info', user: @user %>
+      <%= render 'books/under', book: @book %>
+    </div>
     <div class="col-md-8 offset-md-1">
       <h2>Book detail</h2>
       <table class="table">
@@ -8,7 +12,7 @@
           <tr>
             <td>
               <%= link_to user_path(@user) do%>
-              <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+              <%= attachment_image_tag @user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg" %>
               <br>
               <%= @book.user.name %>
               <% end %>
@@ -19,6 +23,20 @@
               <% end %>
             </td>
             <td><%= @book.body %></td>
+            <td>
+              <% if @book.user_id == current_user.id %>
+                <%= link_to edit_book_path(@book) do %>
+                <button class="btn btn-sm btn-success">Edit</button>
+                <% end %>
+              <% end %>
+            </td>
+            <td>
+              <% if @book.user_id == current_user.id %>
+                <%= link_to book_path(@book), method: :delete do %>
+                <button class="btn btn-sm btn-danger">Destroy</button>
+                <% end %>
+              <% end %>
+            </td>
           </tr>
         </tbody>
       </table>
