--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,8 @@
           <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
             <li class="nav-item">
-              <%= link_to 'Home', users_path(), class: 'fas fa-home nav-link text-light' %>
+              <% user = current_user %>
+              <%= link_to 'Home', user_path(user.id), class: 'fas fa-home nav-link text-light' %>
             </li>
             <li class="nav-item">
               <%= link_to 'Users', users_path, class: 'fas fa-users nav-link text-light' %>
