--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,25 @@
-<h2>User info</h2>
-<%= form_with model:@user, local:true do |f| %>
-  <label for="inputName">Name</label>
-  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"name"%>
-  <label for="inputImage">Image</label>
-  <%= f.attachment_field :profile_image, placeholder: "Image" %>
-
-  <label for="inputProfile">Introduction</label>
-  <%= f.text_area :name, autofocus: true, id:"inputProfile", placeholder:"introduction"%>
-  <%= f.submit "Update user" %>
-<% end %>
+<p id="notice"></p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+    <h2>User info</h2>
+      <%= form_with model:@user, local:true do |f| %>
+      <div class="form-group">
+        <label for="inputName">Name</label><br>
+        <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"name"%>
+      </div>
+      <div class="form-group">
+        <label for="inputImage">Image</label><br>
+        <%= f.attachment_field :profile_image, placeholder: "Image" %>
+      </div>
+      <div class="form-group">
+        <label for="inputProfile">Introduction</label><br>
+        <%= f.text_area :introduction, autofocus: true, id:"inputProfile", placeholder:"introduction"%>
+      </div>
+      <div class="form-group">
+        <%= f.submit "Update user", :class=>"btn btn-secondary" %>
+      </div>
+      <% end %>
+    </div>
+  </div>
+</div>
