--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,8 @@
-<p id="notice"></p>
+<p id="notice">
+  <% if flash[:notice] %>
+  <p><%= flash[:notice] %></p>
+  <% end %>
+</p>
 <div class="container">
   <div class="row">
     <div class="col-md-3">
