--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -4,6 +4,12 @@
 
     <body>
         <main>
+          <p id="notice">
+            <% if flash[:notice] %>
+            <p><%= flash[:notice] %></p>
+            <% end %>
+          </p>
+
           <div class="container">
             <div class="row">
                 <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
