アクセス制限機能

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,6 +58,9 @@
     </nav>
   </header>
   <main>
+    <p id="notice">
+      <p><%= flash[:notice] %></p>
+    </p>
     <%= yield %>
   </main>
   <footer>
