--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,6 +4,17 @@
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
     <h2>User info</h2>
       <%= form_with model:@user, local:true do |f| %>
+      <div id="error_explanation">
+      <% if @user.errors.any? %>
+        <%= @user.errors.count %>errors<br>
+          <ul><% @user.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+      <% end %>
+      </div>
+
+
       <div class="form-group">
         <label for="inputName">Name</label><br>
         <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"name"%>
