--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -11,7 +11,7 @@
   <div class="row">
     <div class="col-md-3">
      <%= render 'books/info', user: @user %>
-     <%= render 'books/under', book: @book %>
+     <%= render 'books/under', book: @new %>
     </div>
 
     <div class="col-md-8 offset-md-1">
