--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-3">
       <%= render 'books/info', user: @user %>
-      <%= render 'books/under', book: @book %>
+      <%= render 'books/under', book: @new %>
     </div>
     <div class="col-md-8 offset-md-1">
       <h2>Book detail</h2>
