--- a/app/views/books/_info.html.erb
+++ b/app/views/books/_info.html.erb
@@ -13,8 +13,8 @@
         </tbody>
       </table>
       <div class="row">
-      <% if user.id == current_user.id %>
+      <%# if user.id == current_user.id %>
         <%= link_to "",edit_user_path(user), class:"btn btn-outline-secondary btn-block fas fa-user-cog" %>
-      <% end %>
+      <%# end %>
       </div>
 
