--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -23,6 +23,25 @@
             </td>
             <td><%= @book.body %></td>
             <td>
+            <% if @book.favorited_by?(current_user) %>
+              <p>
+                <%= link_to book_favorites_path(@book), method: :delete do %>
+                  ♥<%= @book.favorites.count %> いいね
+                <% end %>
+              </p>
+            <% else %>
+            <p>
+              <%= link_to book_favorites_path(@book), method: :post do %>
+                ♡<%= @book.favorites.count %> いいね
+              <% end %>
+            </p>
+            <% end %>
+          </td>
+          <td>
+            <p>コメント数：<%= @book.book_comments.count %></p>
+          </td>
+
+            <td>
               <% if @book.user_id == current_user.id %>
                 <%= link_to edit_book_path(@book) do %>
                 <button class="btn btn-sm btn-success">Edit</button>
@@ -39,6 +58,14 @@
           </tr>
         </tbody>
       </table>
+
+
+      <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
+      <%= f.text_area :comment, rows:'5',placeholder: "" %><br>
+      <%= f.submit "送信" %>
+      <% end %>
+
+
     </div>
   </div>
 </div>
