--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -59,13 +59,36 @@
         </tbody>
       </table>
 
+      <table>
+        <tbody>
 
+            <% @book.book_comments.each do |book_comment| %>
+            <% user = User.find(book_comment.user_id) %>
+            <tr>
+              <td>
+                <%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %><br>
+                <%= book_comment.user.name %>
+              </td>
+              <td><%= book_comment.comment %></td>
+              <td>
+                <% if book_comment.user == current_user %>
+                <div>
+                  <%= link_to "削除", book_book_comment_path(book_comment.book, book_comment), method: :delete %>
+                </div>
+                <% end %>
+              </td>
+            </tr>
+            <% end %>
+        </tbody>
+      </table>
+
+
+      <div>
       <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
       <%= f.text_area :comment, rows:'5',placeholder: "" %><br>
       <%= f.submit "送信" %>
       <% end %>
-
-
+      </div>
     </div>
   </div>
 </div>
