--- a/app/views/books/_info.html.erb
+++ b/app/views/books/_info.html.erb
@@ -10,11 +10,32 @@
           <th>introduction</th>
           <th><%= user.introduction %></th>
         </tr>
+        <tr>
+          <th>follows</th>
+          <th><%= user.follower.count %></th>
+        </tr>
+        <tr>
+          <th>followers</th>
+          <th><%= user.followed.count %></th>
+        </tr>
         </tbody>
       </table>
       <div class="row">
-      <%# if user.id == current_user.id %>
+      <% if user.id == current_user.id %>
         <%= link_to "",edit_user_path(user), class:"btn btn-outline-secondary btn-block fas fa-user-cog" %>
-      <%# end %>
+      <% end %>
+      </div>
+      <div>
+        <div>
+        <% unless user == current_user %>
+        <% if current_user.following?(user) %>
+        <%= link_to 'フォロー外す', unfollow_path(user.id), class:"btn btn-sm btn-info", method: :POST %>
+        <% else %>
+        <%= link_to 'フォローする', follow_path(user.id), class:"btn btn-sm btn-success", method: :POST %>
+        <% end %>
+        <% end %>
+      </div>
+
+
       </div>
 
