--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,6 +61,18 @@
     <p id="notice">
       <p><%= flash[:notice] %></p>
     </p>
+      <% if user_signed_in? %>
+      <div class="search-form">
+
+        <%= form_with url: search_path, method: :get, local: true do |f| %>
+          <%= f.text_field :word %>
+          <%= f.select :range, options_for_select({ "User" => "1", "Book" => "2" }) %>
+　        <%= f.select :method, options_for_select({ "前方一致" => "forward_match", "後方一致" => "backward_match", "完全一致" => "perfect_match", "部分一致" => "partial_match" }) %>
+          <%= f.submit '検索' %>
+        <% end %>
+      <% end %>
+      </div>
+
     <%= yield %>
   </main>
   <footer>
