--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -40,21 +40,8 @@
           <%= link_to book.title, book_path(book.id) %>
           </td>
           <td><%= book.body %></td>
-          <td>
-            <% if book.favorited_by?(current_user) %>
-              <p>
-                <%= link_to book_favorites_path(book), method: :delete do %>
-                  ♥<%= book.favorites.count %> いいね
-                <% end %>
-              </p>
-            <% else %>
-            <p>
-              <%= link_to book_favorites_path(book), method: :post do %>
-                ♡<%= book.favorites.count %> いいね
-              <% end %>
-            </p>
-            <% end %>
-          </td>
+
+          #いいねボタン
 
           <td>
             <p>コメント数：<%= book.book_comments.count %></p>
