--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -27,9 +27,10 @@
           <th colspan="3"></th>
         </tr>
       </thead>
+
       <tbody>
         <% @books.each do |book| %>
-        <tr>
+        <tr id="book_<%= book.id %>">
           <% user = User.find(book.user_id) %>
           <td>
           <%= link_to user_path(user) do%>
@@ -39,9 +40,12 @@
           <td>
           <%= link_to book.title, book_path(book.id) %>
           </td>
+
           <td><%= book.body %></td>
 
-          #いいねボタン
+          <td class="favorite-btn">
+            <%= render "favorites/favorite-btn", book: book %>
+          </td>
 
           <td>
             <p>コメント数：<%= book.book_comments.count %></p>
