--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,7 +8,7 @@
       <h2>Book detail</h2>
       <table class="table">
         <tbody>
-          <tr>
+          <tr id="book_<%= @book.id %>">
             <td>
               <%= link_to user_path(@user) do%>
               <%= attachment_image_tag @user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg" %>
@@ -22,24 +22,10 @@
               <% end %>
             </td>
             <td><%= @book.body %></td>
+            <td class="favorite-btn"><%= render "favorites/favorite-btn", book: @book %></td>
             <td>
-            <% if @book.favorited_by?(current_user) %>
-              <p>
-                <%= link_to book_favorites_path(@book), method: :delete do %>
-                  ♥<%= @book.favorites.count %> いいね
-                <% end %>
-              </p>
-            <% else %>
-            <p>
-              <%= link_to book_favorites_path(@book), method: :post do %>
-                ♡<%= @book.favorites.count %> いいね
-              <% end %>
-            </p>
-            <% end %>
-          </td>
-          <td>
-            <p>コメント数：<%= @book.book_comments.count %></p>
-          </td>
+              <p>コメント数：<%= @book.book_comments.count %></p>
+            </td>
 
             <td>
               <% if @book.user_id == current_user.id %>
@@ -96,7 +82,7 @@
 
 
       <div>
-      <%= form_with(model:[@book, @comment], local: true) do |f| %>
+      <%= form_with model:[@book,@comment] do |f| %>
       <%= f.text_area :comment, rows:'5',placeholder: "" %><br>
       <%= f.submit "送信" %>
       <% end %>
