--- a/app/views/favorites/_favorite-btn.html.erb
+++ b/app/views/favorites/_favorite-btn.html.erb
@@ -1,15 +1,5 @@
-<td>
-            <% if book.favorited_by?(current_user) %>
-              <p>
-                <%= link_to book_favorites_path(book), method: :delete do %>
-                  ♥<%= book.favorites.count %> いいね
-                <% end %>
-              </p>
-            <% else %>
-            <p>
-              <%= link_to book_favorites_path(book), method: :post do %>
-                ♡<%= book.favorites.count %> いいね
-              <% end %>
-            </p>
-            <% end %>
-</td>
+<% if book.favorited_by?(current_user) %>
+  <%= link_to book.favorites.count, book_favorites_path(book), method: :delete, remote: true, class: "fas fa-heart" %>
+<% else %>
+  <%= link_to book.favorites.count, book_favorites_path(book), method: :post, remote: true, class: "far fa-heart" %>
+<% end %>
