--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -23,7 +23,7 @@
             </td>
             <td><%= @book.body %></td>
             <td class="favorite-btn"><%= render "favorites/favorite-btn", book: @book %></td>
-            <td>
+            <td class="comments-count">
               <p>コメント数：<%= @book.book_comments.count %></p>
             </td>
 
@@ -60,26 +60,13 @@
           </div>
 
 
-            <% @book.book_comments.each do |book_comment| %>
-            <% user = User.find(book_comment.user_id) %>
-            <tr>
-              <td>
-                <%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %><br>
-                <%= book_comment.user.name %>
-              </td>
-              <td><%= book_comment.comment %></td>
-              <td>
-                <% if book_comment.user == current_user %>
-                <div>
-                  <%= link_to "削除", book_book_comment_path(book_comment.book, book_comment), method: :delete %>
-                </div>
-                <% end %>
-              </td>
-            </tr>
-            <% end %>
+
         </tbody>
       </table>
 
+      <table class="book_comments">
+        <%= render 'book_comments/index', book: @book %>
+      </table>
 
       <div>
       <%= form_with model:[@book,@comment] do |f| %>
