--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -4,7 +4,7 @@
     <%= f.text_field :name %></br>
     <%= f.label :紹介文 %>
     <%= f.text_area :introduction%></br>
-    <%#= f.attachment_field :image %>
+    <%= f.attachment_field :image %>
     <%= f.submit 'create group', :class=>"btn btn-primary" %>
 
 <% end %>
