--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,1 +1,5 @@
 <h1>Group Detail</h1>
+<%= @group.image %>
+<%= @group.name %>
+<%= @group.introduction %>
+<%= link_to edit_group_path(@group.id) %>
