--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,5 +1,6 @@
 <h1>Group Detail</h1>
-<%= @group.image %>
+
+<%= attachment_image_tag @group, :image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
 <%= @group.name %>
 <%= @group.introduction %>
-<%= link_to edit_group_path(@group.id) %>
+<%= link_to "edit", edit_group_path(@group.id) %>
