--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -6,6 +6,8 @@
 
 <% if current_user.id == @group.owner_id %>
     <%= link_to "edit", edit_group_path(@group.id), class: "btn btn-success"%>
+<% elsif @group.group_me?(current_user) %>
+    <%= link_to "leave this group", group_group_users_path(@group), method: :delete, class: "btn btn-danger" %>
 <% else %>
-    <%= link_to "Join this group", group_group_users_path(@group.id), method: :post, class: "btn btn-primary"%>
+    <%= link_to "Join this group", group_group_users_path(@group), method: :post, class: "btn btn-primary" %>
 <% end %>
