--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,13 +1,37 @@
 <h1>Group Detail</h1>
 
-<%= attachment_image_tag @group, :image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
-<%= @group.name %>
-<%= @group.introduction %>
-
-<% if current_user.id == @group.owner_id %>
-    <%= link_to "edit", edit_group_path(@group.id), class: "btn btn-success"%>
-<% elsif @group.group_me?(current_user) %>
-    <%= link_to "leave this group", group_group_users_path(@group), method: :delete, class: "btn btn-danger" %>
-<% else %>
-    <%= link_to "Join this group", group_group_users_path(@group), method: :post, class: "btn btn-primary" %>
-<% end %>
+<table>
+    <thead>
+        <th></th>
+        <th>グループ名</th>
+        <th>紹介文</th>
+        <th>メンバー</th>
+        <th></th>
+    </thead>
+    
+    <tbody>
+        <td>
+            <%= attachment_image_tag @group, :image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+        </td>
+        <td>
+            <%= @group.name %>
+        </td>
+        <td>
+            <%= @group.introduction %>
+        </td>
+        <td>
+            <% @group.group_users.each do |gu| %>
+                <%= gu.user.name %>
+            <% end %>
+        </td>
+        <td>
+            <% if current_user.id == @group.owner_id %>
+                <%= link_to "edit", edit_group_path(@group.id), class: "btn btn-success"%>
+            <% elsif @group.group_me?(current_user) %>
+                <%= link_to "leave this group", group_group_users_path(@group), method: :delete, class: "btn btn-danger" %>
+            <% else %>
+                <%= link_to "Join this group", group_group_users_path(@group), method: :post, class: "btn btn-primary" %>
+            <% end %>
+        </td>
+    </tbody>
+</table>
