[fix]group/show

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -21,7 +21,7 @@
         </td>
         <td>
             <% @group.group_users.each do |gu| %>
-                <%= gu.user.name %>
+                <%= gu.user.name %></br>
             <% end %>
         </td>
         <td>
