--- a/app/views/books/_under.html.erb
+++ b/app/views/books/_under.html.erb
@@ -1,16 +1,35 @@
       <h2 class="mt-3">New book</h2>
       <%= form_with model:book, local:true do |f| %>
+      
         <div class="form-group">
           <label for="book_title">Title</label>
           <%= f.text_field :title %>
         </div>
+        
         <div class="form-group">
           <label for="book_opinion">Opinion</label>
           <%= f.text_area :body %>
         </div>
+        
+        <div class="form-group" id="star">
+          <label for="book_rate">Rate</label>
+          <%= f.hidden_field :rate, id: :review_star %>
+        </div>        
+                
+
+        
         <div class="form-group">
-
           <%= f.submit 'Create Book', :class=>"btn btn-success"  %>
-
         </div>
       <% end %>
+      
+        <script>
+          $('#star').raty({
+            size     : 36,
+            starOff:  '<%= asset_path('star-off.png') %>',
+            starOn : '<%= asset_path('star-on.png') %>',
+            starHalf: '<%= asset_path('star-half.png') %>',
+            scoreName: 'book[rate]',
+            half: true,
+          });
+          </script>  
