--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,10 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script src="https://kit.fontawesome.com/8683c470f0.js" crossorigin="anonymous"></script>
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/jquery.raty.js"></script>
+    
+    <link rel="stylesheet" href="jquery.raty.css">
+    <script src="jquery.raty.js"></script>
+    <div></div>
   </head>
 
   <body>
