--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -26,6 +26,22 @@
             <td class="comments-count">
               <p>コメント数：<%= @book.book_comments.count %></p>
             </td>
+            <td>
+              評価：<%= @book.rate %>点
+              
+            <div id="star-rate-<%= @book.id %>"></div>
+            <script>
+            $('#star-rate-<%= @book.id %>').raty({
+              size: 36,
+              starOff:  '<%= asset_path('star-off.png') %>',
+              starOn : '<%= asset_path('star-on.png') %>',
+              starHalf: '<%= asset_path('star-half.png') %>',
+              half: true,
+              readOnly: true,
+              score: <%= @book.rate %>,
+            });
+            </script>  
+            </td>
 
             <td>
               <% if @book.user_id == current_user.id %>
